fix: Text not wrapping on markdown

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -305,6 +305,7 @@
 }
 
 .markdown li {
+  word-wrap: break-word;
   margin-top: 0.5em;
   margin-bottom: 0.5em;
 }
